test to solve problems on mobile animation again

--- a/_sass/themes/_style.scss
+++ b/_sass/themes/_style.scss
@@ -105,6 +105,9 @@ a{
         color: $sitecol-3;
         margin: 0 3px;
         opacity: 1;
+        @include breakpoint($mobile){
+          visibility: hidden;
+        }
       }
 
       // &:hover::after{
